# lolprodle

./: .gitignore  README.md  setup.sh
edgeoffinality/: Dockerfile  PlayerClass.py  crontab  generatePlayers.py  generate_players.py  getTeams.py  get_teams.py  player.py  requirements.txt  select_pod.py  setup.sh
edgeoffinality/deploy/: build_image.sh  load_image.sh  run.sh  upload_image.sh
edgeoffinality/src/: consts.py  generate_players.py  main.py  player.py  select_pod.py
edgeoffinality/src/storage/: lck_players.json  lck_pods.json  lcs_players.json  lcs_pods.json  lec_players.json  lec_pods.json  lpl_players.json  lpl_pods.json
edgeoffinality/storage/: lck_players.json  lck_pod.json  lck_pods.json  lcs_players.json  lcs_pod.json  lcs_pods.json  lec_players.json  lec_pod.json  lec_pods.json  lpl_players.json  lpl_pod.json  lpl_pods.json
frontend/: .env.example  .prettierrc  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/lib/: CorrectGuessAnimation.svelte  Footer.svelte  GuessPage.svelte  HowToButton.svelte  Input.svelte  Inputdiv.svelte  Navbar.svelte  Previous.svelte  RegionSelector.svelte  ResetTimer.svelte  Settings.svelte  Timer.svelte  ToastHandler.svelte  api.ts  consts.ts  cookies.ts  stores.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
leviathan/: Cargo.toml  Dockerfile  README.md  generate_ts_lib.sh  setup.sh
leviathan/deploy/: build_image.sh  load_image.sh  upload_image.sh
leviathan/release/: build.sh  run.sh  upload_image.sh
leviathan/src/: cors.rs  lolprodle.rs  main.rs  root_router.rs  types.rs
leviathan/src/data/: mod.rs  service.rs
leviathan/src/guess/: mod.rs
leviathan/src/v1/: mod.rs  router.rs
libs/: README.md
libs/leviathan-api/: .gitignore  GuessApi.md  README.md  index.ts  package-lock.json  package.json  servers.ts
libs/leviathan-api/.openapi-generator/: FILES
libs/leviathan-api/apis/: GuessApi.ts
lolprodle/: index.html
(+44 files in other folders)
