[package]
name = "leviathan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
